--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -143,7 +143,7 @@ const { title, description } = Astro.props;
     <div id="loading-overlay" class="loading-overlay">
       <div class="loading-spinner"></div>
     </div>
-    <Header transition:animate="slide" />
+    <Header />
     <main class="flex-grow" transition:animate="slide">
       <slot />
     </main>
