--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -38,7 +38,7 @@
       >
         <div class="relative w-full h-[600px] rounded-lg overflow-hidden">
           <img 
-            src="/images/hero-manufacturing.jpg" 
+            src="../images/Low-voltage(1).jpg" 
             alt="Manufacturing Facility" 
             class="absolute inset-0 w-full h-full object-cover"
           />
