--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title, description } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../images/logo.jpg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title} | Tech Manufacturing</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
