--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -38,11 +38,11 @@
       >
         <div class="relative w-full h-[600px] rounded-lg overflow-hidden">
           <img 
-            src="../images/Low-voltage(1).jpg" 
+            src="../images/facility.jpg" 
             alt="Manufacturing Facility" 
             class="absolute inset-0 w-full h-full object-cover"
           />
-          <div class="absolute inset-0 bg-gradient-to-t from-primary/50 to-transparent"></div>
+          <!-- <div class="absolute inset-0 bg-gradient-to-t from-primary/50 to-transparent"></div> -->
         </div>
       </div>
     </div>
